<resources>
    <string name="app_name">CarsRiaApp</string>

    <string name="mark">Марка</string>
    <string name="model">Модель</string>
    <string name="year_min">Год, от</string>
    <string name="year_max">Год, до</string>
    <string name="price_min">Цена, от</string>
    <string name="price_max">Цена, до</string>
    <string name="search">Поиск</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>